--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,56 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i>Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__txet">
+            <h1 class="user-component__title">Yejin</h1>
+            <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__chanel-header">
+          <span>Channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title">Channel</h1>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </div>
+      </div>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -30,12 +80,14 @@
           ></a>
         </li>
         <li class="nav__btn">
+          <span class="nav__notification">1</span>
           <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
+          <div class="nav__newpoint"></div>
           <a class="nav__link" href="#"
             ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
