--- a/friends.html
+++ b/friends.html
@@ -51,7 +51,7 @@
         <div class="user-component__column"></div>
       </div>
       <div class="friends-screen__channel">
-        <div class="friends-screen__chanel-header">
+        <div class="friends-screen__channel-header">
           <span>Channel</span>
           <i class="fas fa-chevron-up fa-xs"></i>
         </div>
@@ -62,12 +62,17 @@
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__txet">
-              <h1 class="user-component__title">Channel</h1>
+              <h1 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h1>
             </div>
           </div>
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right"></i>
+          <div>
+          <span>2</span>
+          <i class="fas fa-chevron-right"></i>
+          </div>
+          </div>
           </div>
         </div>
       </div>
@@ -80,15 +85,19 @@
           ></a>
         </li>
         <li class="nav__btn">
-          <span class="nav__notification">1</span>
-          <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a>
+          <a class="nav__link" href="chats.html"
+            ><i class="far fa-comment fa-2x"></i>
+            <span class="nav__notification badge">1</span>
+          </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
           <div class="nav__newpoint"></div>
-          <a class="nav__link" href="#"
+          <a class="nav__link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
