--- a/chats.html
+++ b/chats.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chats - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="아이콘.jpg" />
   </head>
   <body>
     <div class="status-bar">
@@ -14,7 +15,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>20:14</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -29,94 +30,83 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <div class="newpoint newpoint__cog"></div>
+        <span><i class="fas fa-cog fa-lg"></i> </span>
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__txet">
-            <h1 class="user-component__title">Yejin</h1>
-            <h6 class="user-component__subtitle">
-              Flease check Kokoa Account Info
-            </h6>
+      <a href="chat-mom.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title">엄마</h1>
+              <h6 class="user-component__subtitle">I love you~</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">20:14</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__txet">
-            <h1 class="user-component__title">Mom</h1>
-            <h6 class="user-component__subtitle">I love you~</h6>
+      </a>
+      <a href="chat-sister.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title">언니</h1>
+              <h6 class="user-component__subtitle">집</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">18:54</span>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">20:14</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__txet">
-            <h1 class="user-component__title">sister</h1>
-            <h6 class="user-component__subtitle">where are you?</h6>
+      </a>
+      <a href="chat-minseo.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title">민서</h1>
+              <h6 class="user-component__subtitle">독일ㅋㅋㅋㅋ</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">17:32</span>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">18:54</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__txet">
-            <h1 class="user-component__title">Minseo</h1>
-            <h6 class="user-component__subtitle">hey!</h6>
+      </a>
+      <a href="chat-dad.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title">아빠</h1>
+              <h6 class="user-component__subtitle">내 새끼~~</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">15:26</span>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">17:32</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__txet">
-            <h1 class="user-component__title">Dad</h1>
-            <h6 class="user-component__subtitle">my baby~~</h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">15:26</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -136,13 +126,17 @@
           </a>
         </li>
         <li class="nav__btn">
-          <div class="nav__newpoint"></div>
+          <div class="newpoint newpoint__more"></div>
           <a class="nav__link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is too bigㅠㅠ</span>
+      <span>스마트폰으로 접속하거나 화면 사이즈를 줄여 주세요 :)</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
