--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="아이콘.jpg" />
   </head>
   <body>
     <div class="status-bar">
@@ -14,7 +15,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>20:14</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -35,7 +36,10 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>Your screen is too bigㅠㅠ</span>
+      <span>스마트폰으로 접속하거나 화면 사이즈를 줄여 주세요 :)</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
