--- a/friends.html
+++ b/friends.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friends - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="아이콘.jpg" />
   </head>
   <body>
     <div class="status-bar">
@@ -14,7 +15,7 @@
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>20:14</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -28,8 +29,12 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <div class="newpoint newpoint__cog"></div>
+        <span
+        ><i class="fas fa-cog fa-lg"></i>
+      </span>
       </div>
+
     </header>
 
     <a id="friends-display-link">
@@ -40,7 +45,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
+            src="프로필2.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__txet">
@@ -58,7 +63,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
+              src="프로필2.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__txet">
@@ -96,13 +101,21 @@
           ></a>
         </li>
         <li class="nav__btn">
-          <div class="nav__newpoint"></div>
+          <div class="newpoint newpoint__more"></div>
           <a class="nav__link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too bigㅠㅠ</span>
+      <span>스마트폰으로 접속하거나 화면 사이즈를 줄여 주세요 :)</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
