--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="shortcut icon" href="아이콘.jpg" />
   </head>
@@ -25,71 +25,78 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Find</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
         <div class="newpoint newpoint__cog"></div>
         <span
-        ><i class="fas fa-cog fa-lg"></i>
-      </span>
+          ><a href="settings.html"> <i class="fas fa-cog fa-lg"></i></a>
+        </span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="프로필2.jpg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__txet">
+            <h1 class="user-component__title">Yejin</h1>
+            <h6 class="user-component__subtitle">
+              + 787 666 999
+              <i class="fas fa-exclamation-circle"></i>
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fas fa-qrcode"></i>
-          <span>QR Code</span>
+          <i class="far fa-calendar"></i>
+          <span>Calender</span>
+        </div>
+
+        <div class="icon-row__icon icon-row__icon-more">
+          <i class="far fa-grin"></i>
+          <i class="far fa-grin-wink"></i>
+          <span>Talk Drive</span>
         </div>
 
         <div class="icon-row__icon">
-          <i class="far fa-address-book"></i>
-          <span>Add by Contacts</span>
+          <i class="fas fa-paint-roller"></i>
+          <span>Themes</span>
         </div>
 
         <div class="icon-row__icon">
-          <i class="fas fa-fingerprint"></i>
-          <span>Add by ID</span>
-        </div>
-
-        <div class="icon-row__icon">
-          <i class="far fa-envelope"></i>
-          <span>Invite</span>
+          <i class="fas fa-file-invoice-dollar"></i>
+          <span>Account</span>
         </div>
       </div>
-      <div class="recommend-friends">
-        <h6 class="recommended-friends__title">Recommended Friends</h6>
-        <span>You have no recommended friends.</span>
-      </div>
-      <div class="open-chat">
-        <div class="open-chat__header">
-          <h4>Open Chat</h4>
-          <span
-            >Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i
-          ></span>
-        </div>
-        <div class="open-post">
-          <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
-            <div class="open-post__members">
-              <img
-                src="https://imgr.search.brave.com/BhbBJ6583x7xrio6X51KNWuqnMpUb6q6oaMLFqLCNpM/fit/960/953/no/1/aHR0cHM6Ly9pbWcx/LmRhdW1jZG4ubmV0/L3RodW1iL1IxMjgw/eDAvP3Njb2RlPW10/aXN0b3J5MiZmbmFt/ZT1odHRwczolMkYl/MkZibG9nLmtha2Fv/Y2RuLm5ldCUyRmRu/JTJGY3lPSXBnJTJG/YnRxeDdKVERSVHEl/MkYxZnM3TW5LTUs3/blNick05UVRJYkUx/JTJGaW1nLmpwZw"
-              />
-              <span class="open-posr__member-count">802 members</span>
-              <div class="divider"></div>
-              <span class="open-posr__member-status">Active</span>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestion__icon-image">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggestion__icon-text">Kokoa story</span>
           </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img
-              src="https://imgr.search.brave.com/D8NBZ6a8YdczUm9p7bgq-z_r6YJYtCDGruTxyEltTdI/fit/474/225/no/1/aHR0cHM6Ly90c2U0/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC54/Z1Mtcmp0M1FQc040/SHVjc0JGRTZBSGFI/YSZwaWQ9QXBp"
-            />
-            <div class="open-post__heart-count">
-              <i class="fas fa-heart fa-xs"></i>
-              <span>326</span>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestion__icon-image">
+              <i class="fas fa-users"></i>
             </div>
+            <span class="more-suggestion__icon-text">Kokoa friends</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestion__icon-image">
+              <i class="fas fa-chess-knight"></i>
+            </div>
+            <span class="more-suggestion__icon-text">Kokoa gem</span>
           </div>
         </div>
       </div>
