--- a/chat-dad.html
+++ b/chat-dad.html
@@ -11,7 +11,7 @@
   <body class="chat-screen">
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>Kokoa Service</span>
         <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
