아이콘, V 추가

--- a/find.html
+++ b/find.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="아이콘.jpg" />
+    <link rel="shortcut icon" href="아이콘.png" />
   </head>
   <body>
     <div class="status-bar">
@@ -20,7 +20,7 @@
       <div class="status-bar__column">
         <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
-       
+        <i class="fas fa-hand-peace"></i>
       </div>
     </div>
 
