--- a/chat-sister.html
+++ b/chat-sister.html
@@ -20,7 +20,7 @@
       <div class="status-bar__column">
         <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
-   
+        <i class="fas fa-hand-peace"></i>
       </div>
     </div>
     <header class="alt-header">
