--- a/more.html
+++ b/more.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>More - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="아이콘.jpg" />
-  </head>
+    <link rel="shortcut icon" href="아이콘.png"/>
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
@@ -20,6 +19,7 @@
       <div class="status-bar__column">
         <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-hand-peace"></i>
       </div>
     </div>
 
