이스터 최종

--- a/v.html
+++ b/v.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easter Egg</title>
-    <link rel="stylesheet" href="screens/easter.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="shortcut icon" href="아이콘.png" />
   </head>
   <body>
     <div id="easter-egg">
       <span>10만원이 아깝지 않은 강의였어요!</span>
       <span>챌린지 꼭 해보셨으면 좋겠어요!!</span>
+      <a href="friends.html"
+        ><span class="back">friends 화면으로 돌아가기</span></a
+      >
+    </div>
+    <div id="no-mobile">
+      <span>Your screen is too bigㅠㅠ</span>
+      <span>스마트폰으로 접속하거나 화면 사이즈를 줄여 주세요 :)</span>
     </div>
   </body>
 </html>
