--- a/more.html
+++ b/more.html
@@ -19,7 +19,7 @@
       <div class="status-bar__column">
         <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-hand-peace"></i>
+        <a href="v.html"><i class="fas fa-hand-peace"></i></a>
       </div>
     </div>
 
