--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
     </header>
 
     <main class="main-screen">
-      <a href="chat-mom.html">
+      <a href="chat-mango.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -44,7 +44,7 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__txet">
-              <h1 class="user-component__title">엄마</h1>
+              <h1 class="user-component__title">Mango</h1>
               <h6 class="user-component__subtitle">I love you~</h6>
             </div>
           </div>
@@ -54,7 +54,7 @@
           </div>
         </div>
       </a>
-      <a href="chat-sister.html">
+      <a href="chat-orange.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -62,8 +62,8 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__txet">
-              <h1 class="user-component__title">언니</h1>
-              <h6 class="user-component__subtitle">집</h6>
+              <h1 class="user-component__title">Orange</h1>
+              <h6 class="user-component__subtitle">집!</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -71,7 +71,7 @@
           </div>
         </div>
       </a>
-      <a href="chat-minseo.html">
+      <a href="chat-banana.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -79,7 +79,7 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__txet">
-              <h1 class="user-component__title">민서</h1>
+              <h1 class="user-component__title">Banana</h1>
               <h6 class="user-component__subtitle">독일ㅋㅋㅋㅋ</h6>
             </div>
           </div>
@@ -88,7 +88,7 @@
           </div>
         </div>
       </a>
-      <a href="chat-dad.html">
+      <a href="chat-blueberry.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -96,8 +96,8 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__txet">
-              <h1 class="user-component__title">아빠</h1>
-              <h6 class="user-component__subtitle">내 새끼~~</h6>
+              <h1 class="user-component__title">Blueberry</h1>
+              <h6 class="user-component__subtitle">반가워:)</h6>
             </div>
           </div>
           <div class="user-component__column">
