--- a/more.html
+++ b/more.html
@@ -43,7 +43,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__txet">
-            <h1 class="user-component__title">Yejin</h1>
+            <h1 class="user-component__title">Cherry</h1>
             <h6 class="user-component__subtitle">
               + 787 666 999
               <i class="fas fa-exclamation-circle"></i>
