--- a/chat-banana.html
+++ b/chat-banana.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chat - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="아이콘.jpg" />
+    <link rel="shortcut icon" href="아이콘.png" />
   </head>
   <body class="chat-screen">
     <div class="status-bar">
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">언니</h1>
+        <h1 class="alt-header__title">Banana</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -41,28 +41,25 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Sunday, July 18, 2021</div>
       <div class="message-row">
-        <img
-          src="프로필2.jpg"
-        />
-        <div class="message-row-content">
-          <span class="message__author">언니</span>
+        <img src="프로필2.jpg" />
+        <div class="message-row__content">
+          <span class="message__author">Banana</span>
           <div class="message__info">
-            <span class="message__bubble">어디야?</span>
-            <span class="message__time">18:54</span>
+            <span class="message__bubble">절이 많은 나라는?</span>
+            <span class="message__time">21:22</span>
           </div>
         </div>
       </div>
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">집</span>
-            <span class="message__time">18:54</span>
+            <span class="message__bubble">독일ㅋㅋㅋㅋ</span>
+            <span class="message__time">21:22</span>
           </div>
         </div>
       </div>
-     
-    </div>
     </main>
+
     <form class="reply">
       <div class="reply__column">
         <i class="far fa-plus-square fa-lg"></i>
