--- a/chat-blueberry.html
+++ b/chat-blueberry.html
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">민서</h1>
+        <h1 class="alt-header__title">Blueberry</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -43,18 +43,18 @@
       <div class="message-row">
         <img src="프로필2.jpg" />
         <div class="message-row__content">
-          <span class="message__author">민서</span>
+          <span class="message__author">Blueberry</span>
           <div class="message__info">
-            <span class="message__bubble">절이 많은 나라는?</span>
-            <span class="message__time">21:22</span>
+            <span class="message__bubble">처음보네!</span>
+            <span class="message__time">15:26</span>
           </div>
         </div>
       </div>
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">독일ㅋㅋㅋㅋ</span>
-            <span class="message__time">21:22</span>
+            <span class="message__bubble">반가워 :)</span>
+            <span class="message__time">18:54</span>
           </div>
         </div>
       </div>
