--- a/chat-mango.html
+++ b/chat-mango.html
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">아빠</h1>
+        <h1 class="alt-header__title">Mango</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -43,15 +43,14 @@
       <div class="message-row">
         <img src="프로필2.jpg" />
         <div class="message-row__content">
-          <span class="message__author">아빠</span>
+          <span class="message__author">Mango</span>
           <div class="message__info">
-            <span class="message__bubble">내 새끼~~</span>
-            <span class="message__time">15:26</span>
+            <span class="message__bubble">I love you~</span>
+            <span class="message__time">21:22</span>
           </div>
         </div>
       </div>
     </main>
-
     <form class="reply">
       <div class="reply__column">
         <i class="far fa-plus-square fa-lg"></i>
