--- a/chat-orange.html
+++ b/chat-orange.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chat - Kokoa Clone</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="아이콘.png" />
+    <link rel="shortcut icon" href="아이콘.jpg" />
   </head>
   <body class="chat-screen">
     <div class="status-bar">
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">엄마</h1>
+        <h1 class="alt-header__title">Orange</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -41,15 +41,27 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Sunday, July 18, 2021</div>
       <div class="message-row">
-        <img src="프로필2.jpg" />
-        <div class="message-row__content">
-          <span class="message__author">엄마</span>
+        <img
+          src="프로필2.jpg"
+        />
+        <div class="message-row-content">
+          <span class="message__author">Orange</span>
           <div class="message__info">
-            <span class="message__bubble">I love you~</span>
-            <span class="message__time">21:22</span>
+            <span class="message__bubble">어디야?</span>
+            <span class="message__time">18:54</span>
           </div>
         </div>
       </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">집!</span>
+            <span class="message__time">18:54</span>
+          </div>
+        </div>
+      </div>
+     
+    </div>
     </main>
     <form class="reply">
       <div class="reply__column">
