--- a/friends.html
+++ b/friends.html
@@ -49,7 +49,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__txet">
-            <h1 class="user-component__title">Yejin</h1>
+            <h1 class="user-component__title">Cherry</h1>
             <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
           </div>
         </div>
