--- a/v.html
+++ b/v.html
@@ -12,6 +12,8 @@
     <div id="easter-egg">
       <span>10만원이 아깝지 않은 강의였어요!</span>
       <span>챌린지 꼭 해보셨으면 좋겠어요!!</span>
+      <span>(๑˃̵ᴗ˂̵)و ♡</span>
+      <span></span>
       <a href="friends.html"
         ><span class="back">friends 화면으로 돌아가기</span></a
       >
