--- a/chats.html
+++ b/chats.html
@@ -31,7 +31,9 @@
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <div class="newpoint newpoint__cog"></div>
-        <span><i class="fas fa-cog fa-lg"></i> </span>
+        <span
+          ><a href="settings.html"> <i class="fas fa-cog fa-lg"></i></a>
+        </span>
       </div>
     </header>
 
