--- a/find.html
+++ b/find.html
@@ -30,7 +30,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <div class="newpoint newpoint__cog"></div>
         <span
-        ><i class="fas fa-cog fa-lg"></i>
+        ><a href="settings.html"> <i class="fas fa-cog fa-lg"></i></a>
       </span>
       </div>
     </header>
