--- a/friends.html
+++ b/friends.html
@@ -31,7 +31,7 @@
         <span><i class="fas fa-music fa-lg"></i></span>
         <div class="newpoint newpoint__cog"></div>
         <span
-        ><i class="fas fa-cog fa-lg"></i>
+        ><a href="settings.html"> <i class="fas fa-cog fa-lg"></i></a>
       </span>
       </div>
 
