--- a/v.html
+++ b/v.html
@@ -14,6 +14,9 @@
       <span>챌린지 꼭 해보셨으면 좋겠어요!!</span>
       <span>(๑˃̵ᴗ˂̵)و ♡</span>
       <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
       <a href="friends.html"
         ><span class="back">friends 화면으로 돌아가기</span></a
       >
