Friends list 추가

--- a/friends.html
+++ b/friends.html
@@ -80,6 +80,101 @@
           </div>
           </div>
         </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__friends-list">
+        <div class="friends-screen__friends-list-header">
+          <span>Friends 4</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <a href="chat-banana.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title user-component__title--not-bold">
+                Banana
+              </h1>
+            </div>
+          </div>
+          <div class="user-component__column">
+          <div class="friends-list-music">
+            <i class="fas fa-music"></i>
+          <span>I Love Banana</span>
+          </div>
+          </div>
+          </div>
+        </a>
+        <a href="chat-blueberry.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title user-component__title--not-bold">
+                Blueberry
+              </h1>
+            </div>
+          </div>
+          <div class="user-component__column">
+          <div class="friends-list-music">
+            <i class="fas fa-music"></i>
+          <span>I Love Blueberry</span>
+          </div>
+          </div>
+          </div>
+        </a>
+        <a href="chat-mango.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title user-component__title--not-bold">
+                Mango
+              </h1>
+            </div>
+          </div>
+
+          <div class="user-component__column">
+          <div class="friends-list-music">
+            <i class="fas fa-music"></i>
+          <span>I Love Mango</span>
+          </div>
+          </div>
+          </div>
+        </a>
+        <a href="chat-orange.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="프로필2.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__txet">
+              <h1 class="user-component__title user-component__title--not-bold">
+                Orange
+              </h1>
+            </div>
+          </div>
+          <div class="user-component__column">
+          <div class="friends-list-music">
+            <i class="fas fa-music"></i>
+          <span>I Love Orange</span>
+          </div>
+          </div>
+          </div>
+        </a>
+        </div>
+      
+        </div>
       </div>
     </main>
     <nav class="nav">
