버튼크기 작게 바꿈

--- a/friends.html
+++ b/friends.html
@@ -75,7 +75,8 @@
           <div class="user-component__column">
           <div>
           <span>2</span>
-          <i class="fas fa-chevron-right"></i>
+          <span></span>
+          <i class="fas fa-chevron-right fa-xs"></i>
           </div>
           </div>
           </div>
